spacing issue fixes

--- a/assets/styles/pages/_review-supliers.scss
+++ b/assets/styles/pages/_review-supliers.scss
@@ -72,3 +72,7 @@
 .app-step-nav--large .app-step-nav__list{
     padding-bottom: govuk-px-to-rem(25);;
 }
+
+.app-step-nav__controls .js-step-controls-button{
+    padding-top: 0px;
+}
